# autonomes_Fahren

./: .gitignore  .gitlab-ci.yml  Doxyfile  ci_install.sh
wise-2025-26-gruppe-b-main/wise-2025-26-gruppe-b-main/: CPPLINT.cfg  First_Steps.adoc  README.adoc
wise-2025-26-gruppe-b-main/wise-2025-26-gruppe-b-main/docs/Entwicklerdokumentation/: Allgemein.adoc  Entwicklerdokumentation.adoc  Faq.adoc  Motivation.adoc  Parameter.adoc  Quickstart.adoc  Setup.adoc  Statemachine.adoc  Testen.adoc  Workspace.adoc
wise-2025-26-gruppe-b-main/wise-2025-26-gruppe-b-main/scripts/: run_tests.sh
wise-2025-26-gruppe-b-main/wise-2025-26-gruppe-b-main/src/psaf_configuration/include/psaf_configuration/: configuration.hpp
wise-2025-26-gruppe-b-main/wise-2025-26-gruppe-b-main/src/psaf_firststeps/: CMakeLists.txt  package.xml
wise-2025-26-gruppe-b-main/wise-2025-26-gruppe-b-main/src/psaf_firststeps/config/: psaf_firststeps.yaml
wise-2025-26-gruppe-b-main/wise-2025-26-gruppe-b-main/src/psaf_firststeps/include/psaf_firststeps/: controller_node.hpp  firststeps_node.hpp  lane_detection_node.hpp  polynomial_utils.hpp  state_machine_node.hpp  trajectory_node.hpp  watchdog_node.hpp
wise-2025-26-gruppe-b-main/wise-2025-26-gruppe-b-main/src/psaf_firststeps/launch/: firststeps.launch.py
wise-2025-26-gruppe-b-main/wise-2025-26-gruppe-b-main/src/psaf_firststeps/msg/: LaneMarkings.msg  State.msg  StatusInfo.msg  Trajectory.msg
wise-2025-26-gruppe-b-main/wise-2025-26-gruppe-b-main/src/psaf_firststeps/src/: controller_node.cpp  firststeps.cpp  firststeps_node.cpp  lane_detection_node.cpp  state_machine_node.cpp  trajectory_node.cpp  watchdog_node.cpp
wise-2025-26-gruppe-b-main/wise-2025-26-gruppe-b-main/src/psaf_firststeps/test/: unit_tests.cpp
wise-2025-26-gruppe-b-main/wise-2025-26-gruppe-b-main/src/psaf_launch/config/: d435i.yaml  d455.yaml
wise-2025-26-gruppe-b-main/wise-2025-26-gruppe-b-main/src/psaf_launch/launch/: main_psaf1.launch.py
